End of Section6

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -5,5 +5,6 @@
   <ul>
     <li *ngFor="let user of users">{{"User details"}} - {{user.id}} - {{user.userName}}</li>
   </ul> -->
-  <app-home></app-home>
+  <!-- <app-home></app-home> -->
+  <router-outlet></router-outlet>
 </div>
